--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   </ul>
                 </li>
                 <li>
-                  <a href="#none">KARI TV & IMAGE</a>
+                  <a href="subpage/subpage.html">KARI TV & IMAGE</a>
                   <div class="hamburger_toggle">
                     <span></span>
                     <span></span>
@@ -184,7 +184,7 @@
               <li><a href="#none">KARI소개</a></li>
               <li><a href="#none">소식</a></li>
               <li><a href="#none">연구개발</a></li>
-              <li><a href="#none">KARI TV & IMAGE</a></li>
+              <li><a href="subpage/subpage.html">KARI TV & IMAGE</a></li>
               <li><a href="#none">항공우주정책</a></li>
               <li><a href="#none">과학교육</a></li>
               <li><a href="#none">기술사업화</a></li>
@@ -637,6 +637,7 @@
           });
         </script>
       </section>
+      <!-- footer -->
       <footer>
         <div class="footer_wrap grid">
           <div class="footer_menu">
